3.7.10 (unstable):

2013-02-21  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Widget: Add get/set_opacity().

	* gtk/src/widget.[hg|ccg]: Wrap gtk_widget_get_opacity()
	and gtk_Widget_set_opacity() and add the opacity
	property.
	* gtk/src/window.[hg|ccg]: Deprecate get_opacity(),
	set_opacity() and the opacity property.

	This fixes the build with --enable-warnings=fatal

2013-02-21  Murray Cumming  <murrayc@murrayc.com>

	Gtk::ScrolledWindow: Do not use a deprecated function.

	* gtk/src/iconinfo.[hg|ccg]: We no longer need to call
	gtk_scrolled_window_add_with_viewport() because
	its gtk_container_add() vfunc implementation now does the
	same thing for us.
	See https://bugzilla.gnome.org/show_bug.cgi?id=693015

	This partly fixes the build with --enable-warnings=fatal

2013-02-21  Murray Cumming  <murrayc@murrayc.com>

	Gtk::IconInfo: Do not use deprecated copy/free functions.

	* gtk/src/iconinfo.[hg|ccg]: Replace use of deprecated
	gtk_icon_info_copy()/free() with g_object_ref()/unref.
	The deprecated functions just call them anyway.

	This partly fixes the build with --enable-warnings=fatal

2013-02-09  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Gdk::Rectangle: Add Gdk::join() and Gdk::intersect() nonmember functions.

	* gdk/src/rectangle.[hg|ccg]: Add Gdk::Rectangle::intersects(),
	Gdk::join() and Gdk::intersect(). Bug #452130.

2013-01-31  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Small correction to TreeModel::set_value_impl().

	* gtk/src/treemodel.hg: set_value_impl(): Do not suggest calling
	set_value_vfunc() because there is no such function. Maybe there
	was once.

2013-01-23  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Documentation: Fix many warnings from Doxygen.

	* gdk/src/gdk_docs_override.xml:
	* gtk/src/gtk_docs_override.xml: Move "Since: n.m" from the <return> to the
	<description> entries. gmmproc adds a period at the end of the @return
	Doxygen command, and Doxygen warns for "@newin{n,m}.".