@@ -1,3 +1,12 @@
+2013-02-27  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
+	Modify the deletion of widgets.
+
+	* gtk/gtkmm/object.cc: _release_c_instance(): Call disconnect_cpp_wrapper()
+	after g_object_unref() and g_object_run_dispose().
+	* gtk/src/window.ccg: _release_c_instance(): Call disconnect_cpp_wrapper()
+	after gtk_widget_destroy(). Bug #605728. Bug #315874.
+
 3.7.10 (unstable):
 
 2013-02-21  Murray Cumming  <murrayc@murrayc.com>
